// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/AvatarHeader Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container"
  >
    <img
      alt="Avatar"
      className="container size-md"
      src="https://picsum.photos/id/1027/200/200"
    />
    <div
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "space-between",
        }
      }
    >
      <h3
        className="container color-primary"
      >
        ThotLuna
      </h3>
      <h4
        className="container color-base"
      >
        thotluna@gmail.com
      </h4>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/AvatarHeader Size 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container"
  >
    <img
      alt="Avatar"
      className="container size-sm"
      src="https://picsum.photos/id/1027/200/200"
    />
    <div
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "space-between",
        }
      }
    >
      <h4
        className="container color-primary"
      >
        ThotLuna
      </h4>
      <h5
        className="container color-base"
      >
        thotluna@gmail.com
      </h5>
    </div>
  </div>
  <div
    className="container"
  >
    <img
      alt="Avatar"
      className="container size-md"
      src="https://picsum.photos/id/1027/200/200"
    />
    <div
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "space-between",
        }
      }
    >
      <h3
        className="container color-primary"
      >
        ThotLuna
      </h3>
      <h4
        className="container color-base"
      >
        thotluna@gmail.com
      </h4>
    </div>
  </div>
</div>
`;
